--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,19 +1,5 @@
-@function sort-list($list) {
-  $sorted-list: ();
-  @while length($list) > 0 {
-    $smallest: nth($list, 1);
-    @each $item in $list {
-      @if $item < $smallest {
-        $smallest: $item;
-      }
-    }
-    $sorted-list: append($sorted-list, $smallest);
-    $list: remove($list, index($list, $smallest));
-  }
-  @return $sorted-list;
-}
-
 $list_to_sort: john anna zoe kim felicia carrie;
-$sorted_list: sort-list($list_to_sort);
+
+$sorted_list: index(sort($list_to_sort), *);
 
 @debug $sorted_list;
