--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,7 +1,9 @@
+/* Nested hover */
+$col_button: #ff0000;
+$col_but_hover: #00ff00;
 button {
-	color: #ff0000;
-
-	&:hover {
-		color: #00ff00;
-	}
+  color: $col_button;
+  &:hover {
+    color: $col_but_hover;
+  }
 }
