--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,7 +1,4 @@
-/*
-Assign Text color #FF0000 to button tags
-When the user hovers over button tags, text color should change to #00FF00
-*/
+/*Assign Text color #FF0000 to button tags When the user hovers over button tags, text color should change to #00FF00*/
 
 $button-color: #FF0000;
 $button-hover-color: #00FF00;
