--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -5,6 +5,6 @@ $button-hover-color: #00FF00;
 
 button {
     color: $button-color;
-    &hover {
-        color: $button-hover-color;}
+    &:hover {
+        color: $button-hover-color; }
 }
