--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,8 +1,9 @@
-body {
-    margin: 0px;
-    padding: 0px;
+/* Nested declarations */
 
-    p {
-        margin: 10px;
-    }
+body {
+  margin: 0px;
+  padding: 0px;
+  p {
+    margin: 10px;
+  }
 }
