--- a/sass_scss/11-loop_photos.scss
+++ b/sass_scss/11-loop_photos.scss
@@ -1,3 +1,5 @@
+/* Creates a class for each name in the list $list-names and assigns the background image based on the name */
+
 @import '11-loop_photos';
 
 /* All names will be listed */
