--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,10 +1,13 @@
-/*Assign Text color #FF0000 to button tags When the user hovers over button tags, text color should change to #00FF00*/
+/* Adding text and hover coloer for the button*/
 
-$button-color: #FF0000;
-$button-hover-color: #00FF00;
+@mixin button-styles {
+  color: #FF0000;
+
+  &:hover {
+    color: #00FF00;
+  }
+}
 
 button {
-    color: $button-color;
-    &:hover {
-        color: $button-hover-color; }
+  @include button-styles;
 }
