--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,13 +1,10 @@
 /* Adding text and hover coloer for the button*/
-
-@mixin button-styles {
+%button-base {
   color: #FF0000;
-
+}
+button {
+  @extend %button-base;
   &:hover {
     color: #00FF00;
   }
-}
-
-button {
-  @include button-styles;
 }
